@@ -7,14 +7,15 @@ import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.model.input.Prompt;
 import dev.langchain4j.model.input.PromptTemplate;
 import dev.langchain4j.rag.content.Content;
-import lombok.Builder;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static dev.langchain4j.data.message.UserMessage.userMessage;
-import static dev.langchain4j.internal.Utils.*;
+import static dev.langchain4j.internal.Utils.copyIfNotNull;
+import static dev.langchain4j.internal.Utils.getOrDefault;
+import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
+import static dev.langchain4j.internal.Utils.isNullOrEmpty;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotEmpty;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
 import static java.util.stream.Collectors.joining;
@@ -38,6 +39,7 @@ import static java.util.stream.Collectors.joining;
  * <br>
  * - {@link #promptTemplate}: The prompt template that defines how the original {@code userMessage}
  * and {@code contents} are combined into the resulting {@link UserMessage}.
+ * The text of the template should contain the {@code {{userMessage}}} and {@code {{contents}}} variables.
  * <br>
  * - {@link #metadataKeysToInclude}: A list of {@link Metadata} keys that should be included
  * with each {@link Content#textSegment()}.
@@ -45,10 +47,11 @@ import static java.util.stream.Collectors.joining;
 public class DefaultContentInjector implements ContentInjector {
 
     public static final PromptTemplate DEFAULT_PROMPT_TEMPLATE = PromptTemplate.from(
-            "{{userMessage}}\n" +
-                    "\n" +
-                    "Answer using the following information:\n" +
-                    "{{contents}}"
+            """
+                    {{userMessage}}
+                    
+                    Answer using the following information:
+                    {{contents}}"""
     );
 
     private final PromptTemplate promptTemplate;
@@ -66,10 +69,13 @@ public class DefaultContentInjector implements ContentInjector {
         this(ensureNotNull(promptTemplate, "promptTemplate"), null);
     }
 
-    @Builder
     public DefaultContentInjector(PromptTemplate promptTemplate, List<String> metadataKeysToInclude) {
         this.promptTemplate = getOrDefault(promptTemplate, DEFAULT_PROMPT_TEMPLATE);
         this.metadataKeysToInclude = copyIfNotNull(metadataKeysToInclude);
+    }
+
+    public static DefaultContentInjectorBuilder builder() {
+        return new DefaultContentInjectorBuilder();
     }
 
     @Override
@@ -80,8 +86,8 @@ public class DefaultContentInjector implements ContentInjector {
         }
 
         Prompt prompt = createPrompt(chatMessage, contents);
-        if (chatMessage instanceof UserMessage && isNotNullOrBlank(((UserMessage)chatMessage).name())) {
-            return prompt.toUserMessage(((UserMessage)chatMessage).name());
+        if (chatMessage instanceof UserMessage message && isNotNullOrBlank(message.name())) {
+            return prompt.toUserMessage(message.name());
         }
 
         return prompt.toUserMessage();
@@ -157,6 +163,32 @@ public class DefaultContentInjector implements ContentInjector {
     protected String format(String segmentContent, String segmentMetadata) {
         return segmentMetadata.isEmpty()
                 ? segmentContent
-                : String.format("content: %s\n%s", segmentContent, segmentMetadata);
+                : "content: %s\n%s".formatted(segmentContent, segmentMetadata);
+    }
+
+    public static class DefaultContentInjectorBuilder {
+        private PromptTemplate promptTemplate;
+        private List<String> metadataKeysToInclude;
+
+        DefaultContentInjectorBuilder() {
+        }
+
+        public DefaultContentInjectorBuilder promptTemplate(PromptTemplate promptTemplate) {
+            this.promptTemplate = promptTemplate;
+            return this;
+        }
+
+        public DefaultContentInjectorBuilder metadataKeysToInclude(List<String> metadataKeysToInclude) {
+            this.metadataKeysToInclude = metadataKeysToInclude;
+            return this;
+        }
+
+        public DefaultContentInjector build() {
+            return new DefaultContentInjector(this.promptTemplate, this.metadataKeysToInclude);
+        }
+
+        public String toString() {
+            return "DefaultContentInjector.DefaultContentInjectorBuilder(promptTemplate=" + this.promptTemplate + ", metadataKeysToInclude=" + this.metadataKeysToInclude + ")";
+        }
     }
 }
